# expertsystem

./: .gitignore  CMakeLists.txt  author
ES/: andtest.txt  readin.cpp
inc/: expertsystem.hpp
include/: expertsystem.hpp
src/main/: ]  getResults.cpp  main.cpp
src/main/engine/: InferenceEngine.h  inference_engine.cpp
src/main/models/: 1  Node.h  Nodes.h  Query.h  Rule.h  Rules.h
src/main/utils/: Utils.cpp  brackets.c  error_handling.cpp  rpn.cpp  rpn_conv.cpp  run_program.cpp  tools.cpp
src/test/: unit_tests.cpp
